# flowdesk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  STITCHING_GUIDE.md  STITCH_NOTES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmp_verify_fix.cjs  tsconfig.base.json
.claude/: settings.local.json
Research/: PROMPT-sesi-backend.md  REKOMENDASI-keputusan.md  riset-hiro.md
analysis/: case_study.py  ddoi.py  ddoi_diag.py  decode.py  gen_snapshots.py  ingest.py  ingest_batch.py  lapis1.py  lapis1_control.py  plan_90d.py  probe_fields.py  pull5_stage2_data.py  redownload_batch.py  rerun_zerodte.py  surface_fit.py  synthetic_oi.py  synthetic_oi_v2.py  synthetic_oi_v3.py  synthetic_oi_v4.py  verify.py  verify_iv_sane.py  vex_chex.py
docs/: 00-overview.md  01-architecture.md  02-locked-contract.md  03-data-contract.md  04-engine.md  05-data-and-feeds.md  06-api-and-auth.md  07-frontend.md  08-status-and-gaps.md  (+5 more)
services/api/: README.1.6.md  README.md  pyproject.toml
services/api/db/: README.md  __init__.py  repo.py
services/api/db/migrations/: 0001_init.sql
services/api/mocks/: me_anon.json  me_desk.json  me_grace.json  me_no_desk.json  mock_me_server.py
services/api/src/api/: AUTH_README.md  FE_AUTH_CONTRACT.md  REST_README.md  STATE_README.md  WORKER_README.md  WS_README.md  __init__.py  auth.py  auth_session.py  discord_client.py  entitlement.py  errors.py  main.py  models.py  security.py  session.py  state.py  worker.py  ws.py
services/api/tests/: AUTH_TEST_NOTES.md  test_auth.py  test_me_contract.py  test_repo.py  test_rest.py  test_session.py  test_state.py  test_worker.py  test_worker_ddoi.py  test_ws.py
services/engine/: README.md  pyproject.toml
services/engine/scripts/: gen_session_snapshots.py  ingest_databento.py  validate.py
services/engine/src/engine/: __init__.py  black76.py  ddoi.py  exposure.py  exposure_ext.py  field.py  hiro.py  iv.py  levels.py  proprietary.py  schema.py  snapshot.py  surface.py  synthetic_oi.py  total_hedging.py
services/engine/src/engine/feed/: __init__.py  base.py  historical.py  live.py
services/engine/tests/: gen_fixture.py  gen_golden.py  test_black76.py  test_ddoi.py  test_exposure.py  test_exposure_ext.py  test_field_levels.py  test_hiro.py  test_historical.py  test_iv.py  test_proprietary.py  test_snapshot.py  test_surface.py  test_synthetic_oi.py  test_total_hedging.py
services/engine/tests/fixtures/raw/definition/: ES_20260610_20260610.csv
services/engine/tests/fixtures/raw/mbp-1/: ES_20260610_20260610.csv
services/engine/tests/fixtures/raw/statistics/: ES_20260610_20260610.csv
services/engine/tests/fixtures/raw/trades/: ES_20260610_20260610.csv
services/engine/tests/golden/: snapshot.golden.json
(+116 files in other folders)
